[gd_scene load_steps=4 format=2]

[ext_resource path="res://font/Cartoon_Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://View.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="View" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TopPanel" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 81.0
alignment = 1

[node name="Back" type="Button" parent="TopPanel"]
margin_top = 18.0
margin_right = 1280.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
text = "Back"
flat = true
clip_text = true
align = 2

[node name="RigthPanel" type="VBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -142.0
margin_top = 74.0
alignment = 1

[node name="Side" type="Button" parent="RigthPanel"]
margin_top = 178.0
margin_right = 142.0
margin_bottom = 223.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
text = "Side"
flat = true
clip_text = true
align = 2

[node name="Front" type="Button" parent="RigthPanel"]
margin_top = 227.0
margin_right = 142.0
margin_bottom = 272.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
text = "Front"
flat = true
clip_text = true
align = 2

[node name="Top" type="Button" parent="RigthPanel"]
margin_top = 276.0
margin_right = 142.0
margin_bottom = 321.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
text = "Top"
flat = true
clip_text = true
align = 2

[node name="Perspect" type="Button" parent="RigthPanel"]
margin_top = 325.0
margin_right = 142.0
margin_bottom = 370.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
text = "Perspect"
flat = true
clip_text = true
align = 2

[node name="Super" type="Button" parent="RigthPanel"]
margin_top = 374.0
margin_right = 142.0
margin_bottom = 419.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
text = "Super"
flat = true
clip_text = true
align = 2

[node name="Default" type="Button" parent="RigthPanel"]
margin_top = 423.0
margin_right = 142.0
margin_bottom = 468.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.964706, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.270588, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 1 )
text = "Default"
flat = true
clip_text = true
align = 2

[connection signal="pressed" from="TopPanel/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="RigthPanel/Side" to="." method="_on_Side_pressed"]
[connection signal="pressed" from="RigthPanel/Front" to="." method="_on_Front_pressed"]
[connection signal="pressed" from="RigthPanel/Top" to="." method="_on_Top_pressed"]
[connection signal="pressed" from="RigthPanel/Perspect" to="." method="_on_Perspect_pressed"]
[connection signal="pressed" from="RigthPanel/Super" to="." method="_on_Super_pressed"]
[connection signal="pressed" from="RigthPanel/Default" to="." method="_on_Default_pressed"]
